--- a/team.html
+++ b/team.html
@@ -13,7 +13,7 @@
             <li><a href="index.html">主页</a></li>
             <li><a href="rules.html">规则</a></li>
             <li><a href="team.html" class="active">管理组</a></li>
-            <li><a href="shop.html" class="shop">商城</a></li>
+            <li><a href="changelog.html">更新日志</a></li>
         </ul>
         <div class="server-ip">服务器IP：mc.mcsio2.cn <span class="server-qq">QQ群：902147486</span></div>
     </nav>
@@ -103,6 +103,12 @@
     <footer>
         <p>&copy; 2025 二氧化硅生存服务器. 保留所有权利.</p>
         <p><a href="https://github.com/x1aoren/mcsio2_web" target="_blank" rel="noopener">GitHub: x1aoren/mcsio2_web</a></p>
+        <div style="text-align: center; margin-top: 10px; color: #666; font-size: 0.9em;">
+            <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+            <span id="busuanzi_container_site_uv">
+                今日访客数 <span id="busuanzi_value_site_uv"></span> 人次
+            </span>
+        </div>
     </footer>
     <script src="team.js"></script>
 </body>
