feat: 更新不蒜子统计为最新版本并同时显示今日和总访客数
- 更新不蒜子脚本源为官方最新版本 (api.busuanzi.cc/static/3.6.9/busuanzi.min.js)
- 更新统计ID格式为新版本标准格式
- 在所有页面页脚同时显示今日访客数和总访客数
- 使用分隔符'|'区分两个统计数据，提升可读性

修改文件:
- index.html (更新页脚统计代码)
- rules.html (更新页脚统计代码)
- team.html (更新页脚统计代码)
- changelog.html (更新页脚统计代码)

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         <p>&copy; 2025 二氧化硅生存服务器. 保留所有权利.</p>
         <p><a href="https://github.com/x1aoren/mcsio2_web" target="_blank" rel="noopener">GitHub: x1aoren/mcsio2_web</a></p>
         <div style="text-align: center; margin-top: 10px; color: #666; font-size: 0.9em;">
-            <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-            <span id="busuanzi_container_site_uv">
-                今日访客数 <span id="busuanzi_value_site_uv"></span> 人次
-            </span>
+            <script src="//api.busuanzi.cc/static/3.6.9/busuanzi.min.js" defer></script>
+            本站今日访客数 <span id="busuanzi_today_site_uv">加载中...</span> 人
+            |
+            本站总访客数 <span id="busuanzi_site_uv">加载中...</span> 人
         </div>
     </footer>
 </body>
