refactor: 优化文件架构并更新README文档
📁 文件结构重构:
- 创建 js/ 文件夹，整理所有JavaScript文件
- 创建 docx/ 文件夹，整理所有文档文件
- 使用git mv保持文件历史记录

🔄 路径更新:
- 更新HTML文件中的JS文件引用路径
- 更新JS文件中的markdown文件加载路径
- 移除team.html中不存在的team.js引用

📝 README文档全面更新:
- 更新主要功能说明，体现最新特性
- 添加完整的文件结构树状图
- 增加技术特性和自定义配置说明
- 改进部署指南和使用说明
- 添加在线预览链接

文件变更:
- js/status.js (moved from status.js)
- js/rules.js (moved from rules.js)
- js/changelog.js (moved from changelog.js)
- docx/rules.md (moved from rules.md)
- docx/changelog.md (moved from changelog.md)
- 更新所有HTML文件的路径引用
- 全面重写README.md文档

--- a/rules.html
+++ b/rules.html
@@ -85,6 +85,6 @@
         </div>
     </footer>
     <script src="https://cdn.bootcdn.net/ajax/libs/marked/15.0.12/marked.min.js"></script>
-    <script src="rules.js"></script>
+    <script src="js/rules.js"></script>
 </body>
 </html> 
