--- a/changelog.html
+++ b/changelog.html
@@ -85,6 +85,6 @@
         </div>
     </footer>
     <script src="https://cdn.bootcdn.net/ajax/libs/marked/15.0.12/marked.min.js"></script>
-    <script src="changelog.js"></script>
+    <script src="js/changelog.js"></script>
 </body>
 </html> 
