feat: 更新版本号为1.21.8

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="header-content">
             <h1>二氧化硅生存服务器</h1>
             <div class="header-info">
-                <span class="version">版本：1.21.X</span>
+                <span class="version">版本：1.21.8</span>
                 <span class="header-ip">IP：mc.mcsio2.cn</span>
                 <span class="header-online" id="online-status">在线玩家：获取中...</span>
             </div>
